--- a/Rent/Server/appsettings.json
+++ b/Rent/Server/appsettings.json
@@ -1,20 +1,21 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "IdentityServer": {
-    "Clients": {
-      "Rent.Client": {
-        "Profile": "IdentityServerSPA"
-      }
-    }
-  },
-"AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "DataSource=app.db",
+        "MySqlConnection": "server=localhost;database=rentDb;user=root;password=root"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "IdentityServer": {
+        "Clients": {
+            "Rent.Client": {
+                "Profile": "IdentityServerSPA"
+            }
+        }
+    },
+    "AllowedHosts": "*"
 }
