add paged response

--- a/Rent/Server/appsettings.Development.json
+++ b/Rent/Server/appsettings.Development.json
@@ -1,14 +1,19 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "ConnectionStrings": {
+        "DefaultConnection": "DataSource=app.db",
+        "MySqlConnection": "server=152.70.58.183;database=test_db;user=remote;password=P4$$word"
+    },
+
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "IdentityServer": {
+        "Key": {
+            "Type": "Development"
+        }
     }
-  },
-  "IdentityServer": {
-    "Key": {
-      "Type": "Development"
-    }
-  }
 }
