--- a/Rent/Server/appsettings.json
+++ b/Rent/Server/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
     "ConnectionStrings": {
         "DefaultConnection": "DataSource=app.db",
-        "MySqlConnection": "server=localhost;database=rentDb;user=root;password=root"
+        "MySqlConnection": "server=152.70.58.183;database=test_db;user=remote;password=P4$$word"
     },
     "Logging": {
         "LogLevel": {
