--- a/Rent/Client/Rent.Client.csproj
+++ b/Rent/Client/Rent.Client.csproj
@@ -23,9 +23,11 @@
     <None Remove="Syncfusion.Blazor.Grid" />
     <None Remove="Microsoft.AspNetCore.WebUtilities" />
     <None Remove="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
+    <None Remove="Pages\City\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="Pages\City\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.11" />
