--- a/Rent/Client/Rent.Client.csproj
+++ b/Rent/Client/Rent.Client.csproj
@@ -25,10 +25,12 @@
     <None Remove="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
     <None Remove="Pages\City\" />
     <None Remove="Tewr.Blazor.FileReader" />
+    <None Remove="Pages\Realty\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
     <Folder Include="Pages\City\" />
+    <Folder Include="Pages\Realty\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.11" />
