--- a/Rent/Client/Rent.Client.csproj
+++ b/Rent/Client/Rent.Client.csproj
@@ -23,14 +23,15 @@
     <None Remove="Syncfusion.Blazor.Grid" />
     <None Remove="Microsoft.AspNetCore.WebUtilities" />
     <None Remove="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
-    <None Remove="Pages\City\" />
     <None Remove="Tewr.Blazor.FileReader" />
-    <None Remove="Pages\Realty\" />
+
+    <None Remove="Shared\Realties\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
-    <Folder Include="Pages\City\" />
-    <Folder Include="Pages\Realty\" />
+    <Folder Include="Pages\CityPages\" />
+    <Folder Include="Pages\RealtyPages\" />
+    <Folder Include="Shared\Realties\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.11" />
